# tiktok-toxic

./: .gitignore  3.ingest.md  4.speedlayer.md  QUICKSTART.md  README.md  SUMMARY.md  activate.sh  create_new_data.py  create_toxic_data.py  deactivate.sh  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml
docs/: 2.project_Structure.md  5.batch_layer.md  6.model.md  7.serving_layer.md  8.script.md
scripts/: check_kafka.py  check_model_cache.py  clear_test_data.py  create_tables.py  generate_sample_data.py  init_db.sh  preload_model.py  produce_test_message.py  reset_checkpoint.sh  reset_checkpoint_force.sh  run_batch.sh  setup_cron.sh  start_streaming.sh  test_single_message_performance.py
sql/: serving_views.sql
src/: __init__.py
src/batch_layer/: __init__.py  batch_full_recompute.py
src/ingestion/: __init__.py  json_to_kafka.py
src/models/: __init__.py  toxicity_detector.py
src/speed_layer/: __init__.py  streaming_toxic_backup.py  streaming_toxicity.py
src/utils/: __init__.py  db_utils.py  s3_utils.py
