[project]
name = "tiktok-lambda-toxicity"
version = "1.0.0"
description = "TikTok Toxicity Detection with Lambda Architecture"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "kafka-python==2.0.2",
    "pyspark==3.5.1",
    "transformers==4.36.0",
    "torch==2.1.2",
    "sentencepiece==0.1.99",
    "psycopg2-binary==2.9.9",
    "pyyaml==6.0.1",
    "python-dateutil==2.8.2",
]

[dependency-groups]
dev = []
